# disas-bench

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  bench.py  clean-all.sh  distorm.patch  make-all.sh  requirements.txt
.github/workflows/: benchmark.yml
bench/: load_bin.inc
bench-cs/: Makefile  main.c
bench-distorm/: Makefile  main.c
bench-xed/: Makefile  main.c
bench-zydis/: CMakeLists.txt  main.c
bench/armv7/yaxpeax-arm/: Cargo.toml  Makefile
bench/armv7/yaxpeax-arm/src/: main.rs
bench/bddisasm/: .gitignore  Makefile  Makefile.win  main.c
bench/cs/: .gitignore  Makefile  Makefile.win  main.c
bench/distorm/: .gitignore  Makefile  Makefile.win  main.c
bench/iced-x86/: .gitignore  Cargo.toml  Makefile  Makefile.win
bench/iced-x86/src/: main.rs
bench/sleigh/: CMakeLists.txt  load_bin.h  main.cpp
bench/xed/: .gitignore  Makefile  Makefile.win  main.c
bench/yaxpeax/: .gitignore  Cargo.toml  Makefile  Makefile.win
bench/yaxpeax/src/: main.rs
bench/zydis/: .gitignore  CMakeLists.txt  main.c
shared/: load_bin.inc
