[package]
name = "iced-bench"
version = "0.0.0"
authors = ["iximeow <me@iximeow.net>"]
description = "benchmarking wrapper for iced-x86, for use in disas-bench"
edition = "2018"

[[bin]]
name = "iced-bench"
path = "src/main.rs"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true

[features]
decoder = ["iced-x86/std", "iced-x86/decoder"]
formatter = ["iced-x86/std", "iced-x86/decoder", "iced-x86/fast_fmt"]

[dependencies.iced-x86]
git = "https://github.com/icedland/iced"
default-features = false
