[package]
name = "yaxpeax-bench"
version = "0.0.0"
authors = ["iximeow <me@iximeow.net>"]
description = "benchmarking wrapper for yaxpeax-x86, for use in disas-bench"
edition = "2018"

[[bin]]
name = "yaxpeax-bench"
path = "src/main.rs"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true

[features]
decoder = []
formatter = []

[dependencies]
yaxpeax-x86 = { path = "../../libs/yaxpeax", version = "*", default-features = false, features = ["std"] }
yaxpeax-arch = { version = "*", default-features = false }
